# flutter-webrtc

./: .clippy.toml  .editorconfig  .env  .gitattributes  .gitignore  .metadata  .pubignore  .rustfmt.toml  .swiftformat  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README-zh_CN.md  README.md  analysis_options.yaml  build.yaml  flutter-webrtc.code-workspace  format.sh  pubspec.yaml
.dart_tool/: package_config.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
Documentation/: E2EE.md
android/: .gitignore  .project  build.gradle  libwebrtc.aar  local.properties  proguard-rules.pro  settings.gradle
common/: flutter_webrtc_plugin.h
crates/libwebrtc-sys/: .gitignore  Cargo.toml  NOTICE  build.rs
crates/libwebrtc-sys/include/: adm.h  adm_proxy.h  audio_device_recorder.h  bridge.h  delegating_apm.h  device_info_mac.h  device_video_capturer.h  local_audio_source.h  mac_capturer.h  media_stream_track_interface.h  mouse_cursor_monitor_mac.h  peer_connection.h  peer_connection_observer.h  rtp_codec_parameters.h  rtp_encoding_parameters.h  rtp_parameters.h  rtp_receiver_interface.h  rtp_sender_interface.h  screen_video_capturer.h  stats.h  video_sink.h
crates/libwebrtc-sys/src/: bridge.cc  bridge.rs  lib.rs
crates/libwebrtc-sys/src/cpp/: adm.cc  audio_device_recorder.cc  bridge.cc  delegating_apm.cc  device_info_mac.mm  device_video_capturer.cc  fake_frame_source.cc  local_audio_source.cc  mac_capturer.mm  media_stream_track_interface.cc  mouse_cursor_monitor_mac.mm  peer_connection.cc  peer_connection_observer.cc  rtp_codec_parameters.cc  rtp_encoding_parameters.cc  rtp_parameters.cc  rtp_receiver_interface.cc  rtp_sender_interface.cc  screen_video_capturer.cc  screen_video_capturer.cpp  stats.cc  test_audio_device_module.cc  video_sink.cc
crates/native/: Cargo.toml  build.rs
crates/native/include/: api.h  media_devices.h  media_devices_mac.h
crates/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  cpp_api.rs  device_info.rs  devices.rs  frb.rs  frb_generated.rs  internal.rs  lib.rs  media_devices.m  pc.rs  renderer.rs  stream_sink.rs  user_media.rs  video_sink.rs
crates/native/src/api/: media_info.rs  mod.rs  rtc_rtp_encoding_parameters.rs  rtc_rtp_send_parameters.rs
crates/native/src/api/capability/: mod.rs  rtp_header_extension_capability.rs
crates/native/src/api/capability/rtp_codec/: mod.rs  rtcp_feedback.rs  scalability_mode.rs
crates/native/src/api/media/: mod.rs
crates/native/src/api/media/constraints/: audio.rs  mod.rs  video.rs
crates/native/src/api/media_stream_track/: audio_processing_config.rs  media_type.rs  mod.rs  track_event.rs  track_state.rs
crates/native/src/api/peer/: mod.rs  rtc_session_description.rs  video_codec_info.rs
crates/native/src/api/peer/events/: ice_connection_state.rs  ice_gathering_state.rs  mod.rs  peer_connection_state.rs  rtc_track_event.rs  signaling_state.rs
crates/native/src/api/peer/rtc_configuration/: bundle_policy.rs  ice_transports_type.rs  mod.rs  rtc_ice_server.rs
crates/native/src/api/stats/: ice_role.rs  mod.rs  rtc_ice_candidate_stats.rs  rtc_inbound_rtp_stream_media_type.rs  rtc_media_source_stats_media_type.rs  rtc_outbound_rtp_stream_media_type.rs  rtc_stats_ice_candidate_pair_state.rs
crates/native/src/api/transceiver/: direction.rs  init.rs  mod.rs
crates/native/src/media/: device.rs  mod.rs  source.rs  track.rs
elinux/: CMakeLists.txt  flutter_webrtc_plugin.cc
example/: .flutter-plugins-dependencies  .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
ios/: .gitignore  flutter_webrtc.podspec  medea_flutter_webrtc.podspec  videosdk_webrtc.podspec  webrtc.podspec
lib/: MediaStream.dart  MediaStreamTrack.dart  RTCDTMFSender.dart  RTCDataChannel.dart  RTCIceCandidate.dart  RTCPeerConnection.dart  RTCPeerConnectionFactory.dart  RTCSessionDescrption.dart  RTCStatsReport.dart  RTCVideoView.dart  Utils.dart  WebRTC.dart  enums.dart  (+25 more)
linux/: .gitignore  CMakeLists.txt  Makefile  flutter_webrtc_plugin.cc  loopback_capturer_factory.cc  medea_flutter_webrtc_plugin.cc  pipewire_loopback_capturer.cc  pipewire_loopback_capturer.h  task_runner_linux.cc  task_runner_linux.h
linux/flutter/: binary_messenger_impl.h  core_implementations.cc  plugin_registrar.cc  texture_registrar_impl.h
linux/flutter/include/flutter/: encodable_value.h  plugin_registrar.h  texture_registrar.h
linux/flutter_webrtc/: flutter_web_r_t_c_plugin.h
linux/include/: video_texture.h
linux/include/flutter_webrtc/: flutter_web_r_t_c_plugin.h
linux/include/medea_flutter_webrtc/: medea_flutter_webrtc_plugin.h
linux/rust/include/flutter-webrtc-native/include/: api.h
linux/rust/src/: flutter_webrtc_native.cc
windows/: .gitignore  .pubignore  CMakeLists.txt  FlutterWebRTCPlugin.vcxproj  FlutterWebRTCPlugin.vcxproj.filters  PluginInfo.props  application_loopback_capturer.cc  application_loopback_capturer.h  flutter_webrtc_plugin.cc  flutter_webrtc_plugin.h  loopback_capturer_factory.cc  medea_flutter_webrtc_plugin.cpp  medea_flutter_webrtc_plugin.h  medea_flutter_webrtc_plugin_c_api.cpp  plugin.vcxproj  plugin.vcxproj.filters  task_runner_windows.cc  task_runner_windows.h
windows/flutter_webrtc/: flutter_web_r_t_c_plugin.h
windows/include/: flutter_data_channel.h  flutter_media_stream.h  flutter_peer_connection.h  flutter_peerconnection.h  flutter_video_renderer.h  flutter_webrtc.h  flutter_webrtc_base.h  media_stream.h  parsing.h  peer_connection.h  video_renderer.h
windows/include/flutter_webrtc/: flutter_web_r_t_c_plugin.h
windows/include/medea_flutter_webrtc/: medea_flutter_webrtc_plugin_c_api.h
windows/rust/include/: flutter_webrtc_native.h  flutter_webrtc_native.hpp
windows/rust/include/flutter-webrtc-native/include/: api.h
windows/rust/lib/: flutter_webrtc_native.dll.lib
windows/src/: flutter_data_channel.cc  flutter_media_stream.cc  flutter_peer_connection.cc  flutter_peerconnection.cc  flutter_video_renderer.cc  flutter_webrtc.cc  flutter_webrtc_base.cc  media_stream.cc  peer_connection.cc  video_renderer.cc
(+1061 files in other folders)
