[package]
name = "libwebrtc-sys"
version = "0.0.0+116.0.5845.110"
edition = "2021"
rust-version = "1.62"
publish = false
links = "webrtc"

[dependencies]
anyhow = "1.0"
cxx = "1.0"
derive_more = { version = "0.99", features = ["deref", "deref_mut", "from"], default-features = false }

[build-dependencies]
anyhow = "1.0"
cxx-build = "1.0"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
tar = "0.4"
walkdir = "2.3"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"
