[package]
name = "libwebrtc-sys"
version = "0.0.0+131.0.6778.85-r1"
edition = "2021"
rust-version = "1.81"
publish = false
links = "webrtc"

[features]
fake-media = []

[dependencies]
anyhow = "1.0"
cxx = "1.0"
derive_more = { version = "1.0", features = ["deref", "deref_mut", "from"] }

[build-dependencies]
anyhow = "1.0"
cxx-build = "1.0"
flate2 = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
tar = "0.4"
walkdir = "2.5"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"
