[package]
name = "flutter-webrtc-native"
version = "0.0.0"
edition = "2021"
rust-version = "1.58"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
cxx = "1.0"
dashmap = "5.3"
derive_more = "0.99"
flutter_rust_bridge = "1.28"
lazy_static = "1.4"
libwebrtc-sys = { path = "../libwebrtc-sys" }
log = "0.4"
once_cell = "1.10"
threadpool = "1.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "0.3"
nix = { version = "0.24", features = ["poll"] }
pulse = { version = "2.26", package = "libpulse-binding" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dbt", "winuser"] }

[build-dependencies]
cxx-build = "1.0"
