[package]
name = "flutter-webrtc-native"
version = "0.0.0"
edition = "2021"
rust-version = "1.62"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
cxx = "1.0"
dashmap = "5.4"
derive_more = "0.99"
flutter_rust_bridge = "=1.49.1"
lazy_static = "1.4"
libwebrtc-sys = { path = "../libwebrtc-sys" }
log = "0.4"
once_cell = "1.16"
threadpool = "1.8"
xxhash = { package = "xxhash-rust", version = "0.8", features = ["xxh3"] }

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "0.3"
nix = { version = "0.25", features = ["poll"] }
pulse = { version = "2.26", package = "libpulse-binding" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dbt", "winuser"] }

[build-dependencies]
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[target.'cfg(not(target_os = "macos"))'.build-dependencies]
cxx-build = "1.0"
